# pyang-json-schema-plugin

./: README.md  pyproject.toml  pyproject.toml.wip  setup.py
.devcontainer/: Dockerfile  devcontainer.json
pyang_json_schema_plugin/: jsonschema.py
