[tool.poetry]
authors = ["Carl Moberg"]
name = "pyang-json-schema-plugin"
description = "a small pyang plugin to convert YANG to jsonschema"
version = "0.1.1"
license = "New-style BSD"
readme = "README.md"
keywords=[
  'yang', 
  'extraction', 
  'jsonschema'
  ]
classifiers = []

[tool.poetry.dependencies]
python = '>=3.7'
pyang = '>=2.6.0'
jsonschema = '>=4.0.0'

[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry.urls]
"repo" = "https://github.com/fire-ant/pyang-json-schema-plugin"

[tool.poetry.plugins."pyang.plugin"]
"json_tree_plugin" = "pyang_json_schema_plugin.jsonschema:pyang_plugin_init"
